# Auto_Latex

./: README.md  main.py  pyproject.toml  sub.txt
tool/: __init__.py  tab1.py  tab2.py  tab3.py  utils.py
