[project]
name = "gw-2025-b3-2-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "notion-client",
    "requests",
    "pyinstaller",
    "streamlit-tree-select",
    "networkx",
    "plotly"
]
